--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ script:
   - test_simple=/home/travis/build/rocky/emacs-dbgr/elpa/test-simple-20130710.1126
   - loc_changes=/home/travis/build/rocky/emacs-dbgr/elpa/loc-changes-20130711.309
   - load_relative=/home/travis/build/rocky/emacs-dbgr/elpa/load-relative-20130410.549
-  - elpath=${elpath}${test_simple}:${loc_changes}:${load_relative}
+  - cl_lib=/home/travis/build/rocky/emacs-dbgr/elpa/cl-lib-0.3
+  - elpath=${elpath}${test_simple}:${loc_changes}:${load_relative}:${cl_lib}
   - ls -lR /home/travis
   - echo $elpath
   - EMACSLOADPATH=$elpath /bin/sh ./autogen.sh && EMACSLOADPATH=$elpath make check
