--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
 # run the tests
 script:
   - curl -fsSkL https://raw.github.com/rejeep/carton/master/go | sh
-  - bash ~/.carton/bin/carton
+  - export PATH="/home/travis/.cask/bin:$PATH"
+  - carton
   - elpath=$(emacs -batch -q -no-site-file -eval "(message (apply 'concat (mapcar (lambda(x) (concat x \":\")) load-path)))" 2>&1)
   - test_simple=/home/travis/build/rocky/emacs-dbgr/elpa/test-simple-20130710.1126
   - loc_changes=/home/travis/build/rocky/emacs-dbgr/elpa/loc-changes-20130711.309
