--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ install:
 script:
   - curl -fsSkL https://raw.github.com/rejeep/carton/master/go | sh
   - export PATH="/home/travis/.cask/bin:$PATH"
-  - carton
+  - cask
   - elpath=$(emacs -batch -q -no-site-file -eval "(message (apply 'concat (mapcar (lambda(x) (concat x \":\")) load-path)))" 2>&1)
-  - test_simple=/home/travis/build/rocky/emacs-dbgr/elpa/test-simple-20130710.1126
-  - loc_changes=/home/travis/build/rocky/emacs-dbgr/elpa/loc-changes-20130711.309
-  - load_relative=/home/travis/build/rocky/emacs-dbgr/elpa/load-relative-20130410.549
-  - cl_lib=/home/travis/build/rocky/emacs-dbgr/elpa/cl-lib-0.3
+  - test_simple=/home/travis/build/rocky/emacs-dbgr/.cask/*/elpa/test-simple-*
+  - loc_changes=/home/travis/build/rocky/emacs-dbgr/.cask/*/elpa/loc-changes-*
+  - load_relative=/home/travis/build/rocky/emacs-dbgr/.cask/elpa/load-relative-*
+  - cl_lib=/home/travis/.emacs.d/*/bootstrap/cl-lib-*/
   - elpath=${elpath}${test_simple}:${loc_changes}:${load_relative}:${cl_lib}
   - # ls -lR /home/travis
   - echo $elpath
