--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: emacs
 
+env:
+  matrix:
+    - EMACS=emacs24
+
+before_install:
+  - sudo add-apt-repository -y ppa:cassou/emacs
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq $EMACS
+
 install:
   # Install emacs.
-  - "sudo apt-get install emacs23-nox"
 
 # run the tests
 script:
