--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: emacs-lisp
 
 env:
   - EMACS=emacs24
-  - NO_CHECK_EMACS_PACKAGES=1
 
 # run the tests
 script:
-  - /bin/bash ./autogen.sh && cd test && make check-elget
+  - NO_CHECK_EMACS_PACKAGES=1 /bin/bash ./autogen.sh && cd test && make check-elget
