--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: emacs-lisp
 env:
   - EMACS=emacs24
 
+before_install:
+  - sudo add-apt-repository -y ppa:cassou/emacs
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq $EMACS
+
 # run the tests
 script:
   - NO_CHECK_EMACS_PACKAGES=1 /bin/bash ./autogen.sh && cd test && make check-elget
