Start to handle nodejs debugger. Not nearly done though.

--- a/configure.ac
+++ b/configure.ac
@@ -68,6 +68,7 @@ AC_CONFIG_FILES([Makefile \
 		 realgud/debugger/gdb/Makefile \
 		 realgud/debugger/gub/Makefile \
 		 realgud/debugger/kshdb/Makefile \
+		 realgud/debugger/nodejs/Makefile \
 		 realgud/debugger/perldb/Makefile \
 		 realgud/debugger/pdb/Makefile \
 		 realgud/debugger/pydb/Makefile \
