--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ lispdir = @lispdir@
 
 include common.mk
 
-PHONY=check clean dist distclean test
+PHONY=check clean dist distclean test check-short check-terse install-short
 
 EXTRA_DIST+=common.mk README.md THANKS
 
