First semblance of a working jdb debugger interface.

--- a/configure.ac
+++ b/configure.ac
@@ -67,6 +67,7 @@ AC_CONFIG_FILES([Makefile \
 		 realgud/debugger/bashdb/Makefile \
 		 realgud/debugger/gdb/Makefile \
 		 realgud/debugger/gub/Makefile \
+		 realgud/debugger/jdb/Makefile \
 		 realgud/debugger/kshdb/Makefile \
 		 realgud/debugger/nodejs/Makefile \
 		 realgud/debugger/perldb/Makefile \
