--- a/realgud/debugger/Makefile.am
+++ b/realgud/debugger/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = \
-	bashdb gdb gub kshdb nodejs \
+	bashdb gdb gub jdb kshdb nodejs \
 	pdb perldb pydb pydbgr rdebug remake \
 	trepan trepan2 trepan3k trepan.pl trepanx trepan8 \
 	zshdb
