helper.el: transform jdb to realgud:jdb core.el: use langauge-specific extensions in compilation-find-file track-mode.el: remove defvaralias for now.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/common.mk
 
-PHONY=check test all check-elget test-elget
+PHONY=check test all check-elget test-elget help
 EXTRA_DIST += gcd.py gcd.rb
 
 #: overall help on running the make targets
