Redo realgud:gdb-suggest-invocation

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,7 @@
 include $(top_srcdir)/common.mk
 
 PHONY=check test all check-elget test-elget help
-EXTRA_DIST += gcd.py gcd.rb
+EXTRA_DIST += gcd.py gcd.rb gdb
 
 #: overall help on running the make targets
 help:
