--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: emacs-lisp
 
-sudo: false
-
 env:
   - EMACS=emacs24
+
+before_install:
+  - if [ "$EMACS" = 'emacs24' ]; then
+      sudo add-apt-repository -y ppa:cassou/emacs &&
+      sudo apt-get update -qq &&
+      sudo apt-get install -qq
+          emacs24 emacs24-el emacs24-common-non-dfsg;
+    fi
 
 # run the tests
 script:
