--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
       sudo add-apt-repository -y ppa:cassou/emacs &&
       sudo apt-get update -qq &&
       sudo apt-get install -qq
-          emacs24 emacs24-el emacs24-common-non-dfsg;
+          emacs24 emacs24-el emacs24-common-non-dfsg emacs-goodies-el;
     fi
 
 # run the tests
