--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ language: emacs-lisp
 env:
   - EMACS=emacs24
 
-before_install:
+install:
   - if [ "$EMACS" = 'emacs24' ]; then
       sudo add-apt-repository -y ppa:cassou/emacs &&
-      sudo apt-get update -qq &&
-      sudo apt-get install -qq
-          emacs24 emacs24-el emacs24-common-non-dfsg;
+      sudo apt-get -qq update &&
+      sudo apt-get -qq -f install &&
+      emacs24 emacs24-el;
     fi
 
 # run the tests
