--- a/realgud/debugger/Makefile.am
+++ b/realgud/debugger/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = \
 	bashdb gdb gub jdb kshdb nodejs \
 	pdb perldb pydb pydbgr rdebug remake \
-	trepan trepan2 trepan3k trepan.pl trepanx trepan8 \
+	trepan trepan2 trepan3k trepan.pl trepanjs trepanx trepan8 \
 	zshdb
 EXTRA_DIST = common.mk
 
