--- a/Makefile.am
+++ b/Makefile.am
@@ -44,4 +44,24 @@ check-terse:
 install-short:
 	$(MAKE) install 2>&1  | $(RUBY) test/make-check-filter.rb
 
-.PHONY: test check check-short rmChangeLog
+.PHONY: test check check-short rmChangeLog check_copyrights
+
+CR_EXCEPTIONS=cr_exceptions.txt
+check_copyrights:
+	@echo "Compute exceptions >$(CR_EXCEPTIONS)~"
+	@export LC_ALL=C;					    \
+	(cd $(top_srcdir) &&					    \
+	find . -name '.git' -prune -o				    \
+	       -name 'test' -prune -o				    \
+	       -name '*.el' -print0 |				    \
+	    xargs -0 grep -L 'Free Software Foundation, Inc' |	    \
+	    grep -v '\(\.dir-locals\|.-\(pkg\|autoloads\)\)\.el$$'; \
+	find . -name '.git' -prune -o -name '*.el' -type f -print | \
+	    while read f; do					    \
+	        fquoted="$$(echo $$f|tr '|' '_')";		    \
+	        sed -n -e '/[Cc]opyright.*, *[1-9][-0-9]*,\?$$/N'   \
+	            -e '/Free Software Foundation/d'		    \
+	            -e "s|^\\(.*[Cc]opyright\\)|$$fquoted:\\1|p"    \
+	           "$$f";					    \
+	    done) | sort >$(CR_EXCEPTIONS)~
+	diff -u "$(CR_EXCEPTIONS)" "$(CR_EXCEPTIONS)~"
