--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,9 @@
 include $(top_srcdir)/common.mk
 
+lisp_files = $(wildcard *.el)
+lisp_LISP = $(lisp_files)
+EXTRA_DIST = $(lisp_files)
+
 PHONY=check test all check-elget test-elget help
 
 #: overall help on running the make targets
