--- a/realgud/common/Makefile.am
+++ b/realgud/common/Makefile.am
@@ -2,3 +2,7 @@ SUBDIRS = buffer
 
 include $(top_srcdir)/common.mk
 lispdir = @lispdir_realgud@/$(notdir $(subdir))
+
+lisp_files = $(wildcard *.el)
+lisp_LISP = $(lisp_files)
+EXTRA_DIST = $(lisp_files)
