--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -60,11 +60,13 @@ check-short-elget:
 	$(MAKE) check-elget 2>&1  | ruby make-check-filter.rb
 
 test-%.run:
-	(cd $(top_srcdir)/test && $(EMACS) --batch --no-site-file --no-splash --load $(@:.run=.el))
+	(cd $(top_srcdir)/test && EMACSLOADPATH=$(EMACSLOADPATH) $(EMACS) --batch --no-site-file --no-splash --load $(@:.run=.el))
 
 #: Run tests using el-get to specify external Lisp dependencies
 test-%.elrun:
-	(cd $(top_srcdir)/test && $(EMACS) --batch --no-site-file --no-splash --load ../el-get-install.el --load $(@:.elrun=.el))
+	(cd $(top_srcdir)/test && EMACSLOADPATH=$(EMACSLOADPATH) $(EMACS) --batch --no-site-file --no-splash --load ../el-get-install.el --load $(@:.elrun=.el))
+
+install-lispLISP: $(lisp_LISP) $(ELCFILES)
 
 # Whatever it is you want to do, it should be forwarded to the
 # to top-level directories
