--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -64,7 +64,7 @@ test-%.run:
 
 #: Run tests using el-get to specify external Lisp dependencies
 test-%.elrun:
-	(cd $(top_srcdir)/test && EMACSLOADPATH=$(EMACSLOADPATH) $(EMACS) --batch --no-site-file --no-splash --load ../el-get-install.el --load $(@:.elrun=.el))
+	(cd $(top_srcdir)/test && $(EMACS) --batch --no-site-file --no-splash --load ../el-get-install.el --load $(@:.elrun=.el))
 
 install-lispLISP: $(lisp_LISP) $(ELCFILES)
 
