--- a/realgud/debugger/Makefile.am
+++ b/realgud/debugger/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = \
 	bashdb gdb gub ipdb jdb kshdb nodejs \
 	pdb perldb rdebug remake \
 	trepan trepan2 trepan3k trepan.pl trepanjs \
-	zshdb
+	undodb-gdb zshdb
 EXTRA_DIST = common.mk
 
 .PHONY: check all
