Get ready for 1.4.4 release. Admnistrivia
realgud.el: bump version number
Remove/reduce messages of undefined functions
pdb: correct some variabes names
Makefile.am: don't remove .nosearch

Update copyright on files that have changed htis year

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 /configure
 /configure.lineno
 /elpa
+/emacs-load-relative
+/emacs-loc-changes
+/emacs-test-simple
 /how-to-make-a-release.txt
 /install-sh
 /missing
