--- a/realgud/lang/Makefile.am
+++ b/realgud/lang/Makefile.am
@@ -1,3 +1,4 @@
+include $(top_srcdir)/common.mk
 lispdir = @lispdir_realgud@/$(notdir $(subdir))
 lisp_files := $(wildcard *.el)
 lisp_LISP = $(lisp_files)
