--- a/realgud/debugger/zshdb/Makefile.am
+++ b/realgud/debugger/zshdb/Makefile.am
@@ -3,3 +3,6 @@ include ../common.mk
 lisp_files = $(wildcard *.el)
 lisp_LISP = $(lisp_files)
 EXTRA_DIST = $(lisp_files)
+
+zshdb.elc: core.elc track-mode.elc
+track-mode.elc: core.elc init.elc
