--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
 # Install EVM, version EVM_EMACS
 install:
   - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
+  - evm install $EVM_EMACS --use --skip
 
 # run the tests
 script:
