--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -62,9 +62,9 @@ check-short-elget:
 test-%.run:
 	(cd $(top_srcdir)/test && EMACSLOADPATH=$(EMACSLOADPATH) $(EMACS) --batch --no-site-file --no-splash --load $(@:.run=.el))
 
-#: Run tests using el-get to specify external Lisp dependencies
+#: Run tests using cask to specify external Lisp dependencies
 test-%.elrun:
-	(cd $(top_srcdir)/test && $(EMACS) --batch --no-site-file --no-splash --load ../cask-install.el --load $(@:.elrun=.el))
+	(cd $(top_srcdir)/test && $(EMACS) --batch  --no-splash --load ../cask-install.el --load $(@:.elrun=.el))
 
 install-lispLISP: $(lisp_LISP) $(ELCFILES)
 
