Try adding back more test for Travis

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -43,11 +43,7 @@ test-elget: check-elget
 test_files := $(wildcard test-*.el)
 
 CHECK_FILES = $(notdir $(test_files:.el=.run))
-
-# There is a big in the Travis setup where
-travis_test_files := $(wildcard test-[c-r,t-z]*.el)
-
-EL_GET_CHECK_FILES = $(notdir $(travis_test_files:.el=.elrun))
+EL_GET_CHECK_FILES = $(notdir $(test_files:.el=.elrun))
 
 #: Run all tests
 check: $(CHECK_FILES)
