--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: no
 env:
  - EVM_EMACS=emacs-26.1-travis
  - EVM_EMACS=emacs-26.2-travis
+ - EVM_EMACS=emacs-25.3-travis
 
 # Install EVM, version EVM_EMACS
 install:
