--- a/realgud/debugger/Makefile.am
+++ b/realgud/debugger/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = \
 	bashdb gdb gub kshdb \
 	pdb perldb rdebug remake \
-	trepan trepan2 trepan3k trepan.pl \
+	trepan trepan2 trepan3k trepan.pl trepanjs \
 	zshdb
 EXTRA_DIST = common.mk
 
