--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 
 # Install EVM, version EVM_EMACS
 install:
-  - sudo apt install -y libgnutls28-dev
+  - sudo apt install -y libgnutls-dev
   - curl -fsSkL https://gist.github.com/rejeep/ebcd57c3af83b049833b/raw > travis.sh && source ./travis.sh
   - evm install $EVM_EMACS --use --skip
 
