--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: emacs-lisp
 sudo: no
 
 env:
- - EVM_EMACS=emacs-26.3-travis
+#  - EVM_EMACS=emacs-26.3-travis # Broken on travis
  - EVM_EMACS=emacs-25.3-travis
  - EVM_EMACS=emacs-25.2-travis
 
